# horcrux

./: Cargo.toml  README.md
db/: Cargo.toml  test_restore
db-generator/: Cargo.toml
db-generator/src/: main.rs
db/src/: db.rs  lib.rs  shards.rs  snapshot.rs
server/: Cargo.toml
server/src/: handler.rs  lib.rs  memcache.rs  server.rs  worker.rs
src/: horcrux.rs  main.rs  memcached.rs
src/horcrux/: db.rs  handler.rs  memcache.rs  server.rs  shard.rs  snapshot.rs  snapshot_handler.rs  types.rs  worker.rs
src/memcached/: handler.rs  server.rs  snapshot_handler.rs  types.rs
tests/: integration_test.rs
types/src/: types.rs
