[package]
name = "horcrux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
libc = "0.2.158"
log = "0.4.22"
nix = {version = "0.29.0", features = ["process", "fs"]}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
