[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
types.workspace = true
db.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
crossbeam-channel.workspace = true
bytes.workspace = true
chrono.workspace = true
nix.workspace = true
